# rome-sdk

./: Cargo.toml  Dockerfile  Makefile  README.md  example.config.json
.github/workflows/: build_sdk.yml  rust_doc.yml
rome-da/: Cargo.toml
rome-da/examples/: fetch_blob.rs  submit_blocks.rs  subscribe_blobs.rs
rome-da/src/celestia/: mod.rs  types.rs  utils.rs
rome-evm-client/: Cargo.toml
rome-evm-client/src/: client.rs  error.rs  lib.rs  resources.rs  util.rs
rome-evm-client/src/indexer/: block_parser.rs  config.rs  ethereum_block_storage.rs  indexed_transaction.rs  indexer.rs  log_parser.rs  metrics_reporter.rs  mod.rs  multiplexed_solana_client.rs  pending_blocks.rs  produced_blocks.rs  rollup_indexer.rs  solana_block_inmemory_storage.rs  solana_block_loader.rs  solana_block_storage.rs  solana_client.rs  standalone_indexer.rs  transaction_data.rs  transaction_inmemory_storage.rs  transaction_storage.rs  tx_parser.rs
rome-evm-client/src/indexer/block_producers/: block_producer.rs  engine_api_block_producer.rs  mod.rs  single_state_block_producer.rs
rome-evm-client/src/indexer/inmemory/: ethereum_block_storage.rs  mod.rs  solana_block_storage.rs  transaction_storage.rs
rome-evm-client/src/indexer/parsers/: block_parser.rs  default_tx_parser.rs  l1_attributes.rs  log_parser.rs  mod.rs  tx_parser.rs
rome-evm-client/src/indexer/pg_storage/: config.rs  ethereum_block_storage.rs  mod.rs  solana_block_storage.rs  transaction_storage.rs  types.rs
rome-evm-client/src/indexer/pg_storage/migrations/2024-11-25-151837_sol_block/: down.sql  up.sql
rome-evm-client/src/indexer/pg_storage/migrations/2024-11-26-124308_evm_tx/: down.sql  up.sql
rome-evm-client/src/indexer/pg_storage/migrations/2024-11-26-124439_eth_block/: down.sql  up.sql
rome-evm-client/src/indexer/pg_storage/migrations/2024-12-27-090400_client_read_methods/: down.sql  up.sql
rome-evm-client/src/indexer/pg_storage/migrations/2025-01-09-112123_slot_statuses/: down.sql  up.sql
rome-evm-client/src/indexer/pg_storage/migrations/2025-01-16-095320_update_gas_recipients/: up.sql
rome-evm-client/src/indexer/pg_storage/migrations/2025-03-04-143155_add_solana_blockhashes/: up.sql
rome-evm-client/src/indexer/pg_storage/migrations/2025-05-06-124637_fix_queries/: up.sql
rome-evm-client/src/indexer/relayer/: mod.rs  solana_block_storage.rs
rome-evm-client/src/transaction_sender/: atomic_tx.rs  atomic_tx_holder.rs  cross_rollup_tx.rs  iterative_tx.rs  iterative_tx_holder.rs  mod.rs  transaction_builder.rs  transaction_signer.rs  tx_batch.rs  utils.rs
rome-evm-client/src/tx/: alt.rs  alt_composed.rs  alt_composed_holder.rs  atomic.rs  atomic_holder.rs  atomic_svm.rs  builder.rs  cross_chain_atomic.rs  cross_rollup_atomic.rs  iterative.rs  iterative_holder.rs  mod.rs  transmit_tx.rs  utils.rs
rome-geth/: Cargo.toml  README.md
rome-geth/src/: abstracted.rs  lib.rs
rome-geth/src/engine/: claim.rs  config.rs  engine_api_block_producer.rs  mod.rs
rome-geth/src/engine/types/: mod.rs  param.rs
rome-geth/src/indexers/: mod.rs  pending_txs.rs
rome-geth/src/types/: tx.rs
rome-obs/: Cargo.toml  README.md
rome-obs/src/: env.rs  lib.rs  meter.rs  sampler.rs  tracer.rs
rome-obs/src/builder/: exporter.rs  meter.rs  mod.rs  resource.rs
rome-relayer/: Cargo.toml  build.rs
rome-relayer/proto/: relayer.proto
rome-relayer/src/: client.rs  lib.rs
rome-sdk/: Cargo.toml
rome-sdk/examples/: common.rs  remus.rs  rhea.rs  romulus.rs
rome-sdk/examples/common/: mod.rs
rome-sdk/src/: config.rs  lib.rs  rome.rs
rome-sdk/src/tx/: mod.rs  remus.rs  rhea.rs  romulus.rs  tx_tuple.rs
rome-solana/: Cargo.toml
rome-solana/src/: config.rs  lib.rs  payer.rs  tower.rs
rome-solana/src/batch/: ix.rs  mod.rs  step_ix.rs
rome-solana/src/geyser/: config.rs  consumer.rs  mod.rs  producer.rs
rome-solana/src/geyser/records/: account.rs  mod.rs  slot.rs  tx.rs
rome-solana/src/indexers/: blocks.rs  clock.rs  mod.rs
rome-solana/src/types/: commitment.rs  mod.rs
rome-utils/: Cargo.toml
rome-utils/src/: config.rs  hex.rs  iter.rs  lib.rs  rand.rs  rlp.rs
rome-utils/src/auth/: state.rs
rome-utils/src/holder/: factory.rs  mod.rs
rome-utils/src/jsonrpc/: client.rs  err.rs  mod.rs  req.rs  res.rs
rome-utils/src/services/: mod.rs  runner.rs  ws_listner.rs
rome-utils/src/services/poller/: atomic.rs  constant.rs  mod.rs
rome-utils/src/types/: mod.rs  network.rs  runtime.rs
