[workspace]
members = ["rome-sdk", "rome-solana", "rome-utils", "rome-geth", "rome-evm-client", "rome-da"]
resolver = "2"

[workspace.dependencies]
# Error handling
anyhow = "1.0.86"
thiserror = "1.0.63"
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# Cli
clap = { version = "4.5.11", features = ["derive"] }
# HTTP Client
reqwest = { version =  "0.12.0", features = ["json"] }
# Server
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
async-trait = "0.1.81"
tokio-util = "0.7.11"
jsonwebtoken = "9.3.0"
# time
chrono = { version = "0.4.38", features = ["serde"] }
# Serialization and deserialization
serde = { version = "1.0.204", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["hex"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
rlp = { version = "0.5.2", features = ["derive"] }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.12.3"
borsh = "0.9.3"
borsh-derive = "0.9.3"
# evm
ethnum = { version = "1.5.0", default-features = false, features = ["serde"] }
# not using latest due to rome-rollup-program
solana-sdk = "1.18.17"
solana-client = "1.18.17"
solana-program = "1.18.17"
solana-transaction-status = "1.18.17"
solana-geyser-plugin-interface = "1.18.17"
solana-rpc-client-api = "1.18.17"
solana-quic-client = "1.18.17"
# kafka
kafka = "0.10.0"
# compression (emulator client)
flate2 = "1.0.30"
# self dependencies
rome-solana = { path = "rome-solana" }
rome-utils = { path = "rome-utils" }
rome-geth = { path = "rome-geth" }
rome-evm-client = { path = "rome-evm-client" }
# Other utilities
futures-util = { version = "0.3.30", features = ["sink", "tokio-io"] }
dotenv = "0.15.0"
url = { version = "2.5.2", features = ["serde"] }
rand = "0.8.5"
jsonrpsee-core = "0.24.1"
ripemd = "0.1"
# Rome da
sha3 = "0.10.1"

# ethers
ethers = "2.0.14"
rome-evm = { path = "../rome-evm/program" }
emulator = { path = "../rome-evm/emulator" }

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git ="https://github.com/block-mesh/curve25519-dalek"
branch = "rustls-dep-hell-1-18"
