[workspace]
members = ["rome-sdk", "rome-solana", "rome-utils", "rome-geth", "rome-evm-client", "rome-da", "rome-obs"]
resolver = "2"

[workspace.dependencies]
# Error handling
anyhow = "1.0.86"
backoff = "0.4.0"
thiserror = "1.0.63"
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# Cli
clap = { version = "4.5.11", features = ["derive"] }
# HTTP Client
reqwest = { version =  "0.12.0", features = ["json"] }
# Server
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
async-trait = "0.1.81"
tokio-util = "0.7.11"
jsonwebtoken = "9.3.0"
# Time
chrono = { version = "0.4.38", features = ["serde"] }
# Serialization and deserialization
serde = { version = "1.0.204", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["hex"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
rlp = { version = "0.5.2", features = ["derive"] }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.12.3"
borsh = "0.9.3"
borsh-derive = "0.9.3"
# Evm
ethnum = { version = "1.5.0", default-features = false, features = ["serde"] }
# Not using latest due to rome-rollup-program
solana-sdk = "2.1.7"
solana-client = "2.1.7"
solana-program = "2.1.7"
solana-transaction-status = "2.1.7"
solana-rpc-client-api = "2.1.7"
solana-quic-client = "2.1.7"
# Kafka
kafka = "0.10.0"
# Compression (emulator client)
flate2 = "1.0.30"
# Self dependencies
rome-solana = { path = "rome-solana" }
rome-utils = { path = "rome-utils" }
rome-geth = { path = "rome-geth" }
rome-evm-client = { path = "rome-evm-client",  default-features = false}
# Rome Relayer
rome-relayer = { path = "rome-relayer" }
tonic = "0.13.1" 
tonic-build = "0.13.1"
prost = "0.13.5"
prost-build = "0.13.5"
moka = "0.12.10"
# Other utilities
futures-util = { version = "0.3.30", features = ["sink", "tokio-io"] }
futures = "0.3.30"
dotenv = "0.15.0"
url = { version = "2.5.2", features = ["serde"] }
rand = "0.8.5"
jsonrpsee-core = "0.24.1"
bigdecimal = { version = "0.4.7", features = ["serde", "serde_json"] }
# Rome da
sha3 = "0.10.1"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "serde_json"] }
diesel-derive-enum = {  version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
# Otel 
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = "0.22.1"
# Tracing 
tracing-opentelemetry = "0.23.0"
# Ethers
ethers = "2.0.14"
rome-evm = { path = "../rome-evm/program", default-features = false }
emulator = { path = "../rome-evm/emulator", default-features = false }

[patch.crates-io.curve25519-dalek]
git ="https://github.com/block-mesh/curve25519-dalek"
branch = "rustls-dep-hell-1-18"
