[package]
name = "rome-da"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
rlp = {workspace = true}

bincode = {workspace = true}

thiserror = {workspace = true}

serde = { workspace = true, features = ["derive", "rc"] }
serde_json = {workspace = true}

dotenv = {workspace = true}
tokio = {workspace = true}
tokio-util = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
ethers = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
sha3 = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}

rome-utils = { workspace = true }
