[package]
name = "rome-evm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = {workspace = true}
rlp = {workspace = true}
rand = "0.8.5"

bincode = {workspace = true}
base64 = {workspace = true}

thiserror = {workspace = true}

serde = { workspace = true, features = ["derive", "rc"] }
serde_json = {workspace = true}

tokio = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true}
tokio-util = { workspace = true }
async-trait = { workspace = true }
jsonrpsee-core = {workspace = true}

solana-client = {workspace = true}
solana-program = {workspace = true}
solana-sdk = {workspace = true}
solana-rpc-client-api = {workspace = true}
solana-transaction-status = {workspace = true}
solana-quic-client = {workspace = true}

rome-evm = { workspace = true } 
rome-utils = { workspace = true }
rome-solana = { workspace = true }
emulator = { workspace = true } 
ethers = { workspace = true }

diesel = {workspace = true}
diesel-derive-enum = {workspace = true}
r2d2 = {workspace = true}