[package]
name = "rome-evm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = {workspace = true}
rlp = {workspace = true}
rand = { workspace = true }
hex = { workspace = true }

bincode = {workspace = true}
base64 = {workspace = true}

thiserror = {workspace = true}

serde = { workspace = true, features = ["derive", "rc"] }
serde_json = {workspace = true}

tokio = { workspace = true}
futures = { workspace = true}
futures-util = { workspace = true}
tokio-util = { workspace = true }
async-trait = { workspace = true }
jsonrpsee-core = { workspace = true}

# relayer
tonic = { workspace = true }
api = { workspace = true } 
moka = {  workspace = true, features = ["future"] }

solana-client = {workspace = true}
solana-program = {workspace = true}
solana-sdk = {workspace = true}
solana-rpc-client-api = {workspace = true}
solana-transaction-status = {workspace = true}

rome-evm = { workspace = true } 
rome-utils = { workspace = true }
rome-solana = { workspace = true }
rome-geth = { workspace = true }
emulator = { workspace = true } 
ethers = { workspace = true, features = ["optimism"] }

diesel = {workspace = true}
diesel-derive-enum = {workspace = true}
r2d2 = {workspace = true}


