[package]
name = "rome-geth"
readme = "README.md"
version = "0.1.0"
edition = "2021"
description = "Geth related functionality to access and advance rollup state"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
rome-utils = { workspace = true }
tracing = { workspace = true }
ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
rome-evm-client = { workspace = true }
bigdecimal = {workspace = true}
