[package]
name = "rome-obs"
version = "0.1.0"
edition = "2021"

[dependencies]
## otel
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-otlp = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"] }

## tracing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [ "fmt", "registry", "env-filter" ] }
tracing-opentelemetry = { workspace = true }
backoff = { workspace = true }

## url
url = { workspace = true }
