[package]
name = "rome-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
rlp = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
rand = { workspace = true }
ethnum = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
